tmux: vi mode, mouse mode, search-back, ctrl-a-a to begin line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,13 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-set-window-option -g mode-keys
+set-window-option -g mode-keys vi
+set-window-option -g mouse on
 
 # Switch panes without prefix using vim motion style
 bind k select-pane -U # Up
 bind j select-pane -D # Down
 bind h select-pane -L # Left
 bind l select-pane -R # Right
+
+bind a send-prefix
