--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+#bind-key "^A" vi-beginning-of-line
+#bind-key "^E" vi-end-of-line
 
 # Remap split commands to something more natural
 # | <--- Split the window vertically
@@ -20,4 +22,22 @@ bind j select-pane -D # Down
 bind h select-pane -L # Left
 bind l select-pane -R # Right
 
-bind a send-prefix
+#bind a send-prefix
+#
+
+set -s set-clipboard external
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'sainnhe/tmux-fzf'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
